--- a/deepLearning/1.md
+++ b/deepLearning/1.md
@@ -4,6 +4,7 @@
 
 Deep learningを用いた, 3D shape classification, 3D object detection and tracking, 3D point segmentationに焦点を当てたサーベイ。
 
+
 ## INTRO
 
 [^1], [^2]と比較して、Deeplearningを用いた手法に着目している。
@@ -70,6 +71,33 @@ PointNet++ - 抽象化のレイヤーを層構造とすること(sampling, group
 + Pointwise networkは、他のタイプのネットワークの基礎（土台）となっている。
 + 畳み込みベースのネットワークは、不規則な点群に対して優れたパフォーマンスを実現可能
 + 基本的には、ほとんどのネットワークでは、点群を固定された小さいサイズにダウンサンプリングする必要があり、形状の詳細は破棄している。（研究は、初期段階)
+
+## 3D Point Cloud Segmentation
+
+セグメンテーションのレベルとして、semantic segmentation(シーンレベル), instance segmentation(オブジェクトレベル), part segmentation(パーツレベル)の3つのカテゴリに分類できる。
+
+### 投影ベース
+
+マルチビュー表現(RGBが必要), 球面表現(中間表現の離散化エラーやオクルージョンなどの問題がある), 体積表現など
+
+### ポイントベース
+  Pointwise MLP, Conv, RNNなど、、、
+
+## Instance Segmentation !!!
+
+semantic segmentationと比較し、ポイントのより正確で詳細な推論を必要とするため、困難。特に、異なるクラスタのポイントを区別するだけでなく、同じクラスタを持つポイントの区別も必要。Proposal-based methodとproposal-free methodsの２つの研究分野がある。
+
+### Proposal-based methods
+
+セグメンテーションの問題を、3Dオブジェクト検出とインスタンスマスク予測の２つのサブタスクに変換。(3D-BoNet:室内適用, [Instance segmentation of lidar point clouds](https://github.com/PRBonn/lidar-bonnetal): 疎な点群データであるLiderによる点群に適用)
+
+### Proposal-free methods
+
+提案ベースでは、多段階トレーニングが必要であり、計算コストも高いので、オブジェクト検出を省き、直接インスタンスセグメンテーションを行う。
+殆どの手法では、同じインスタンスに属する点は類似した特徴を持つべきであるという仮定に基づいている。
+先駆的な論文としてい、[Similarity Group Proposal Network](https://github.com/laughtervv/SGPN) (SGPN)を導入し、最初に各点の特徴とセマンティックマップを学習し、その後、特徴間の類似性を表す類似性まトリックすを導入する。
+計算コストは低いが、明示的にオブジェクト境界を明示的に検出しないため、グループ化された状態のインスタンスセグメントの個別性(オブジェクト性)が低くなる。
+
 
 
 ## 参照 - Survey
